Updated services and tests for doctor and prescription APIs